# g-meter

./: .gitignore  .gitmodules  .gitsubmodules  .project  AUTHORS  AndroidManifest.xml  CMakeCache.txt  CMakeLists.txt  CopyrightNotice.cpp  CopyrightNotice.hpp  Doxyfile  INSTALLATION  LICENSE  README.md  build.xml  local.properties  update_copyright
doc/: Doxyfile
doc/Design/: G-Meter-fig-001.odg  G-Meter.tex  Interconnect-Schematic.odg
jni/: Android.mk  CMakeCache.txt  CMakeLists.txt  SConscript  SConstruct  Toolchain-Android-r8e-standalone.cmake  build-javah  makeit
jni/Engine/ArduIMU_V3/: ADXL345.cpp  AP_Math_freeimu.hpp  AllEights.cpp  AllFours.cpp  AllOnes.cpp  AllTwos.cpp  AllZeros.cpp  AsReceived.calibration.hex  AsReceived.flash.hex  AsReceived.hfuse.hex  AsReceived.lock.hex  AsReceived.signature.hex  AverageFilter.hpp  CMakeCache.txt  CMakeLists.txt  CalibrateIMUFirmware.cpp  CommunicationUtils.cpp  DerivativeFilter.hpp  Filter.hpp  FilterWithBuffer.hpp  FilteringScheme.cpp  FreeIMU.cpp  FreeIMU.hpp  HMC58X3.cpp  I2Cdev.cpp  IMU.cpp  ITG3200.cpp  LowPassFilter.hpp  MPU60X0.cpp  MPU60X0.hpp  MS561101BA.cpp  ModeFilter.hpp  MovingAvarageFilter.cpp  README  RunningAverage.cpp  bma180.cpp  calibration.h  iCompass.hpp  matrix3.cpp  matrix3.hpp
jni/Engine/ArduIMU_V3/Calibration/: calibrate.py
jni/Engine/ArduIMU_V3/test/: ArduIMUDump.cpp  CMakeCache.txt  CMakeLists.txt
jni/Engine/INU/: INUKalman.cpp  INUKalman.hpp  Inu.cpp  Inu.hpp
jni/Engine/INU/Test/: CMakeLists.txt  INUKalman.cpp  Inu.cpp  run
jni/Engine/INU/Test/build-unix32-debug/: CMakeCache.txt  CMakeLists.txt
jni/Engine/INU/Test/build-unix32-release/: CMakeCache.txt  CMakeLists.txt
jni/Engine/Kalman/: README-XCSoar.txt  kstatics.cpp  module.dox
jni/Engine/Kalman/kalman/: ekfilter.hpp  ekfilter_impl.hpp  kfilter.hpp  kfilter_impl.hpp  kmatrix.hpp  kmatrix_impl.hpp  ktypes.hpp  kvector.hpp  kvector_impl.hpp  module.dox
jni/Executive/: MajorState.cpp  MajorState.hpp
jni/Executive/Android/: GPSSensor.cpp  GPSSensor.hpp  NonGPSSensors.cpp  NonGPSSensors.hpp  Timer.cpp  Timer.hpp
jni/Executive/INS/: CMakeCache.txt  CMakeLists.txt  CommonConfig.hpp  IMULink.cpp  IMULink.hpp  Main.cpp
jni/Executive/INS/Test/: .gitignore  CMakeCache.txt  CMakeLists.txt  IMULink.cpp
jni/Executive/INS/build-unix32-debug/: CMakeCache.txt  CMakeLists.txt
jni/Executive/INS/build-unix32-release/: CMakeCache.txt  CMakeLists.txt
jni/Executive/INS/build-unixkobo-release/: CMakeCache.txt  CMakeLists.txt
jni/Executive/Interconnect/: DownstreamServer.cpp  DownstreamServer.hpp  DownstreamSession.cpp  DownstreamSession.hpp  Executive.cpp  Executive.hpp  FlarmSession.test.cpp  FlarmSession.test.hpp  InsLink.cpp  InsLink.hpp  InsSession.test.cpp  InsSession.test.hpp  Interconnect.cpp  Interconnect.hpp  Interconnect.test.cpp  Interconnect.test.hpp  IoQueues.cpp  IoQueues.hpp  Main.cpp  SerialLink.cpp  SerialLink.hpp  SerialLink.test.cpp  SerialLink.test.hpp  Session.cpp  Session.hpp  Support.test.cpp  Support.test.hpp  UpstreamSession.cpp  UpstreamSession.hpp  XCSoarSession.test.cpp  XCSoarSession.test.hpp  XcsoarLink.cpp  XcsoarLink.hpp
jni/Java/: com_exadios_g_meter_InternalGPS.cpp  com_exadios_g_meter_NativeRunnable.cpp  com_exadios_g_meter_NonGPSSensors.cpp  com_exadios_g_meter_Timer.cpp
jni/Native/: CMakeCache.txt  CMakeLists.txt
jni/Utility/: Compiler.h  DeviceInputBuffer.cpp  DeviceInputBuffer.hpp  FastMutex.hpp  Handle.hpp  Local.hpp  Mutex.cpp  Mutex.hpp  Observed.cpp  Observed.hpp  Observer.cpp  Observer.hpp  PosixMutex.hpp
jni/build-android7-debug/: CMakeCache.txt  CMakeLists.txt
jni/build-android7-release/: CMakeCache.txt  CMakeLists.txt
jni/build-unix32-debug/: CMakeCache.txt  CMakeLists.txt
jni/build-unix32-release/: CMakeCache.txt  CMakeLists.txt
jni/build-unixkobo-release/: CMakeCache.txt  CMakeLists.txt
jni/doc/: Doxyfile
lib/: build-boost  clean-boost  user-config.jam
res/values/: strings.xml
src/com/exadios/g_meter/: GMeter.java  GMeterService.java  G_MeterINU.aidl  G_MeterIPC.aidl  IPC.java  InternalGPS.java  Inu.java  Ipc.java  Loader.java  Main.java  NativeRunnable.java  NonGPSSensors.java  SafeDestruct.java  Timer.java
test/Accelerometer/AccelerometerTest/: AndroidManifest.xml  build.xml
test/Accelerometer/AccelerometerTest/res/layout/: activity_fullscreen_acc.xml
test/Accelerometer/AccelerometerTest/res/values/: strings.xml
test/Accelerometer/AccelerometerTest/src/com/exadios/accelerometertest/: AccTest.java  FullscreenAcc.java
test/Accelerometer/AccelerometerTest/src/com/exadios/accelerometertest/util/: SystemUiHider.java  SystemUiHiderBase.java  SystemUiHiderHoneycomb.java
test/GPS/GPSTest/: AndroidManifest.xml  build.xml
test/GPS/GPSTest/res/values/: strings.xml
test/GPS/GPSTest/src/com/exadios/gpstest/: Main.java
test/Gyro/GyroTest/: AndroidManifest.xml  build.xml
test/Gyro/GyroTest/res/layout/: main.xml
test/Gyro/GyroTest/res/values/: strings.xml  styles.xml
test/Gyro/GyroTest/src/com/exadios/gyrotest/: GyroTest.java
